[tool.poetry]
name = "repl_python3_TextSynthTweetGenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
twint = "^2.1.20"
uvicorn = "^0.15.0"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
